# updated-liquidity

./: .gitignore
contracts/fanfurybonding/: Cargo.toml
contracts/fanfurybonding/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/fanfurystake/: Cargo.toml
contracts/fanfurystake/.cargo/: config
contracts/fanfurystake/src/: contract.rs  msg.rs  state.rs  tests.rs
contracts/fanfuryswap/: Cargo.toml
contracts/fanfuryswap/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/stake-cw20/: Cargo.toml  README.md
contracts/stake-cw20/src/: contract.rs
info/testnet/address/: cw20_base  fanfurystake  fanfuryswap
release/: fanfurystake.wasm  fanfuryswap.wasm
util/: util.rs
