[package]
name = "fanfurystake"
version = "1.0.0"
authors = ["Arnold <warnold233@gmail.com>"]
edition = "2018"
description = "FanFury AMM"
license = "Apache-2.0"
repository = "https://github.com/FanFury/liquidity-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = { version = "0.13" }
cw-controllers = "0.13"
cw20 = { version = "0.13" }
cw-utils = { version = "0.13" }
cw20-base = {  version = "0.13", features = ["library"] }
cw2 = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
cw-paginate = { version = "0.1.0", path = "../cw-paginate" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = {  version = "0.13" }
anyhow = { version = "1.0.51"}
